# babybionn-vbc-developer

./: .dockerignore  .env.example  .env.production  .gitignore  Babybionn_integration.py  Build_Proactive_VBC_Chatbot.md  DEVELOPERS_NOTES.md  Dockerfile  README.md  bionn_demo_chatbot.html  build.sh  config.py  docker-compose.dev.yml  docker-compose.pull.yml  docker-compose.yml  enhanced_neural_mesh.py  enhanced_vni_classes.py  knowledge_base.py  knowledge_legal_legal_0.json  knowledge_medical_medical_0.json  knowledge_technical_technical_1.json  learning_analytics.json  learning_analytics.py  llm_Gateway.py  main.py  model_loading.py  neural_mesh.py  predictive_response.py  predictive_vocabulary.py  requirements-binaries.txt  requirements.txt  run_babybionn.py  safety_check.py  setup.sh  specialized_vni_base.py  synaptic_visualization.py  template_engine.py  training_pipeline.py  usage_example.py  use_custom_path.py  (+1 more)
Machine_Consciousness/: Machine_Consciousness.html
WHITEPAPER/: index.html
cache/matplotlib/: fontlist-v330.json
checkpoints/: checkpoint_episode_0.json  checkpoint_episode_100.json  checkpoint_episode_125.json  checkpoint_episode_150.json  checkpoint_episode_175.json  checkpoint_episode_200.json  checkpoint_episode_225.json  checkpoint_episode_25.json  checkpoint_episode_250.json  checkpoint_episode_275.json  checkpoint_episode_300.json  checkpoint_episode_325.json  checkpoint_episode_350.json  checkpoint_episode_375.json  checkpoint_episode_400.json  checkpoint_episode_425.json  checkpoint_episode_450.json  checkpoint_episode_475.json  checkpoint_episode_50.json  checkpoint_episode_75.json  final_trained_model.json  training_state.json
docs/: DECENTRALIZE_NETWORK.md  DEVELOPERS_NOTES.md  FOUNDERS_NOTE#2.md  FOUNDERS_NOTE.md  index.html
enhanced_vni_classes/: __init__.py  vni_spawner.py
enhanced_vni_classes/compatibility/: __init__.py
enhanced_vni_classes/core/: __init__.py  base_vni.py  biological_config_generator.py  biological_mixin.py  capabilities.py  collaboration.py  neural_pathway.py  pipeline_steps.py  registry.py
enhanced_vni_classes/domains/: __init__.py  base_knowledge_loader.py  (+9 more)
knowledge_base/: general_knowledge.json  knowledge_general_info_001.json  knowledge_legal_law_001.json  knowledge_legal_legal_001.json  knowledge_medical_med_001.json  knowledge_medical_medical_0.json  knowledge_medical_medical_001.json  knowledge_technical_engineering_001.json  knowledge_technical_tech_001.json  legal_knowledge.json  medical_knowledge.json  pretraining_processor.py
knowledge_bases/: knowledge_legal_legal_0.json  knowledge_legal_legal_1.json  knowledge_medical_medical_0.json  knowledge_medical_medical_1.json  knowledge_technical_technical_0.json  knowledge_technical_technical_1.json  legal_knowledge_base.json  medical_knowledge_base.json  technical_knowledge_base.json
neuron/: __init__.py  aggregator.py  aggregatorAttn.py  baseVNI_demo.py  demoHybridAttention.py  demo_hybrid_system.py  emrgnt_learner.py  metaCognitive_enhancer.py  mock_response.py  smart_activation_router.py  synaptic_integration.py  synaptic_learning_engine.py  synaptic_visualization.py  transVNI_compare_segregate.py  vni_memory.py  vni_messenger.py  vni_storage.py
new/: __init__.py  migrate_to_refactored.py  pyproject.toml  setup.cfg  setup.py  startup.py
new/api/: __init__.py  app.py  endpoints.py  websocket.py
new/compatibility/: __init__.py  enhanced_vni_integration.py  neuron_integration.py  other_modules_integration.py  smart_router_integration.py
new/core/: __init__.py  adapters.py  attention.py  routing.py
new/utils/: analytics.py  helpers.py  logging.py  orchestrator_config.py
vocabulary/: predictive_vocabulary.json
(+50 files in other folders)
