# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
# Copyright (c) 2026, BabyBIONN Contributors

[metadata]
name = babybionn
version = 2.0.0
author = BabyBIONN Team
author_email = contact@babybionn.ai
description = Enhanced BabyBIONN with Real Learning and Dynamic VNI Networking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/babybionn
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = 
    = babybionn
packages = find:
python_requires = >=3.8
install_requires = 
    torch>=2.0.0
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    pydantic>=2.4.0
    numpy>=1.24.0
    pillow>=10.0.0
    python-multipart>=0.0.6
    websockets>=12.0
    aiofiles>=23.2.0
    python-dotenv>=1.0.0

[options.extras_require]
dev = 
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    pytest-cov>=4.0.0
    pre-commit>=3.5.0
gpu = 
    torchvision>=0.15.0
    torchaudio>=2.0.0
full = 
    transformers>=4.30.0
    sentence-transformers>=2.2.0
    ultralytics>=8.0.0
    scikit-learn>=1.3.0
    matplotlib>=3.7.0
    seaborn>=0.12.0

[options.entry_points]
console_scripts = 
    babybionn = babybionn.main:main
    babybionn-api = babybionn.main:main
    babybionn-cli = babybionn.cli:main

[options.packages.find]
where = babybionn

[options.package_data]
* = 
    static/*
    models/*.json
    config/*.yaml 
